Initial GHC 9.10 support.
Over 1000 test failures. But at least they run.

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -61,10 +61,8 @@ common warnings
 library
   import: warnings
   exposed-modules:     Language.Haskell.GHC.ExactPrint
-                     , Language.Haskell.GHC.ExactPrint.Dump
                      , Language.Haskell.GHC.ExactPrint.ExactPrint
                      , Language.Haskell.GHC.ExactPrint.Lookup
-                     , Language.Haskell.GHC.ExactPrint.Orphans
                      , Language.Haskell.GHC.ExactPrint.Parsers
                      , Language.Haskell.GHC.ExactPrint.Preprocess
                      , Language.Haskell.GHC.ExactPrint.Transform
@@ -72,14 +70,15 @@ library
                      , Language.Haskell.GHC.ExactPrint.Utils
 
   hs-source-dirs:      src
-  build-depends:       base >=4.19 && <4.20
+  build-depends:       base >=4.20 && <4.21
                      , bytestring >= 0.10.6
                      , containers >= 0.5
                      , data-default
-                     , ghc       >= 9.8.1
+                     , ghc       >= 9.10.1
                      , mtl       >= 2.2.1
                      , syb       >= 0.5
                      , ghc-boot
+                     , os-string >= 2.0.2
 
   default-language:    Haskell2010
   if impl (ghc < 9.8)
@@ -101,23 +100,22 @@ Test-Suite test
                      , Test.Transform
   GHC-Options:         -threaded
   Default-language:    Haskell2010
-  Build-depends:       HUnit >= 1.2
-                     , base < 4.20
+  Build-depends:       base < 4.21
+                     , HUnit >= 1.2
                      , containers >= 0.5
                      , Diff
                      , directory >= 1.2
                      , extra
                      , filepath  >= 1.4
-                     , ghc       >= 9.8.1
+                     , ghc       >= 9.10.1
                      , ghc-paths  >= 0.1
                      , syb        >= 0.5
                      , silently   >= 1.2
                      , ghc-boot
+                     -- , os-string >= 2.0.2
   if flag (dev)
-      build-depends: bytestring
-                   , data-default
-                   , free
-                   , mtl        >= 2.2.1
+      build-depends:
+                     mtl        >= 2.2.1
   else
       build-depends: ghc-exactprint
   if impl (ghc < 9.8)
@@ -143,6 +141,7 @@ executable roundtrip
                , ghc-paths
                , time
                , ghc-boot
+               , os-string
     buildable: True
   else
     buildable: False
