--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -32,6 +32,7 @@ extra-source-files:  tests/examples/failing/*.hs
                      tests/examples/ghc94/*.hs
                      tests/examples/ghc96/*.hs
                      tests/examples/ghc98/*.hs
+                     tests/examples/ghc910/*.hs
                      tests/examples/pre-ghc810/*.hs
                      tests/examples/pre-ghc86/*.hs
                      tests/examples/pre-ghc90/*.hs
