--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -56,14 +56,11 @@ library
 
   hs-source-dirs:      src
   build-depends:       base >=4.20 && <4.21
-                     , bytestring >= 0.10.6
-                     , containers >= 0.5
-                     , data-default
-                     , ghc       >= 9.10
-                     , mtl       >= 2.2.1
-                     , syb       >= 0.5
-                     , ghc-boot
-                     , os-string >= 2.0.2
+                     , containers >= 0.5  && < 0.8
+                     , ghc       >= 9.10 && < 9.11
+                     , ghc-boot  >= 9.10 && < 9.11
+                     , mtl       >= 2.2.1 && < 2.5
+                     , syb       >= 0.5 && < 0.8
 
   default-language:    Haskell2010
   if impl (ghc < 9.10)
@@ -115,18 +112,17 @@ executable roundtrip
   default-language:    Haskell2010
   if impl (ghc >= 9.10) && flag (roundtrip)
     build-depends:
-                 HUnit
-               , base
-               , containers
-               , directory
-               , extra
-               , filepath
-               , ghc
+                 HUnit      < 1.7
+               , base       < 4.21
+               , containers < 0.8
+               , directory  < 1.4
+               , extra      < 1.8
+               , filepath   < 1.6
+               , ghc        >= 9.10 && < 9.11
                , ghc-exactprint
-               , ghc-paths
-               , time
+               , ghc-paths  < 0.2
+               , time       < 1.13
                , ghc-boot
-               , os-string
     buildable: True
   else
     buildable: False
@@ -139,34 +135,34 @@ executable static
   other-modules: Test.CommonUtils
   default-language:    Haskell2010
   if flag (roundtrip)
-    build-depends: base
-                 , directory
-                 , extra
-                 , filepath
-                 , ghc
-                 , Diff
+    build-depends: base < 4.21
+                 , directory < 1.4
+                 , extra     < 1.8
+                 , filepath  < 1.6
+                 , ghc       >= 9.10 && < 9.11
+                 , Diff      < 0.6
     buildable: True
   else
     buildable: False
   GHC-Options: -threaded
 
-executable prepare-hackage
-  import: warnings
-  main-is: PrepareHackage.hs
-  other-modules: Test.CommonUtils
-  hs-source-dirs: tests
-  default-language:    Haskell2010
-  if flag (roundtrip)
-    build-depends: base
-                 , containers
-                 , directory
-                 , extra
-                 , filepath
-                 , ghc       >= 9.10
-                 , HUnit
-                 , text   >= 1.2.2
-                 , turtle >= 1.3.0
-    buildable: True
-  else
-    buildable: False
-  GHC-Options: -threaded
+-- executable prepare-hackage
+--   import: warnings
+--   main-is: PrepareHackage.hs
+--   other-modules: Test.CommonUtils
+--   hs-source-dirs: tests
+--   default-language:    Haskell2010
+--   if flag (roundtrip)
+--     build-depends: base < 4.21
+--                  , containers
+--                  , directory
+--                  , extra
+--                  , filepath
+--                  , ghc       >= 9.10
+--                  , HUnit
+--                  , text   >= 1.2.2
+--                  , turtle >= 1.3.0
+--     buildable: True
+--   else
+--     buildable: False
+--   GHC-Options: -threaded
