--- a/cabal.project
+++ b/cabal.project
@@ -1,19 +1,19 @@
 packages: .
 
-source-repository-package
-    type: git
-    location: https://github.com/alanz/extra.git
-    tag: a4305c56ea2c696ea241381b96007b00b0f0b21
+-- source-repository-package
+--     type: git
+--     location: https://github.com/alanz/extra.git
+--     tag: a4305c56ea2c696ea241381b96007b00b0f0b21
 
-repository head.hackage.ghc.haskell.org
-   url: https://ghc.gitlab.haskell.org/head.hackage/
-   secure: True
-   key-threshold: 3
-   root-keys:
-       f76d08be13e9a61a377a85e2fb63f4c5435d40f8feb3e12eb05905edb8cdea89
-       7541f32a4ccca4f97aea3b22f5e593ba2c0267546016b992dfadcd2fe944e55d
-       26021a13b401500c8eb2761ca95c61f2d625bfef951b939a8124ed12ecf07329
-active-repositories: hackage.haskell.org, head.hackage.ghc.haskell.org:override
+-- repository head.hackage.ghc.haskell.org
+--    url: https://ghc.gitlab.haskell.org/head.hackage/
+--    secure: True
+--    key-threshold: 3
+--    root-keys:
+--        f76d08be13e9a61a377a85e2fb63f4c5435d40f8feb3e12eb05905edb8cdea89
+--        7541f32a4ccca4f97aea3b22f5e593ba2c0267546016b992dfadcd2fe944e55d
+--        26021a13b401500c8eb2761ca95c61f2d625bfef951b939a8124ed12ecf07329
+-- active-repositories: hackage.haskell.org, head.hackage.ghc.haskell.org:override
 
 -- optional-packages: packages/*/*.cabal
 
