--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -21,6 +21,7 @@ extra-doc-files:     ChangeLog
 extra-source-files:  tests/examples/failing/*.hs
                      tests/examples/failing/*.hs.bad
                      tests/examples/ghc910/*.hs
+                     tests/examples/ghc912/*.hs
                      tests/examples/pre-ghc910/*.hs
                      tests/examples/pre-ghc910/*.hs-boot
                      tests/examples/transform/*.hs
