--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -33,11 +33,11 @@ jobs:
             compilerVersion: 9.12.0.20241114
             setup-method: ghcup
             allow-failure: false
-          - compiler: ghc-9.12.0.20241114
-            compilerKind: ghc
-            compilerVersion: 9.12.0.20241114
-            setup-method: ghcup-prerelease
-            allow-failure: false
+          # - compiler: ghc-9.12.0.20241114
+          #   compilerKind: ghc
+          #   compilerVersion: 9.12.0.20241114
+          #   setup-method: ghcup-prerelease
+          #   allow-failure: false
       fail-fast: false
     steps:
       - name: apt-get install
@@ -51,8 +51,6 @@ jobs:
           chmod a+x "$HOME/.ghcup/bin/ghcup"
       - name: Install cabal-install
         run: |
-          # "$HOME/.ghcup/bin/ghcup" install cabal 3.12.1.0 || (cat "$HOME"/.ghcup/logs/*.* && false)
-          # echo "CABAL=$HOME/.ghcup/bin/cabal-3.12.1.0 -vnormal+nowrap" >> "$GITHUB_ENV"
           "$HOME/.ghcup/bin/ghcup" config add-release-channel https://raw.githubusercontent.com/haskell/ghcup-metadata/master/ghcup-prereleases-0.0.8.yaml;
           "$HOME/.ghcup/bin/ghcup" install cabal 3.15.0.0.2024.10.3 || (cat "$HOME"/.ghcup/logs/*.* && false)
           echo "CABAL=$HOME/.ghcup/bin/cabal-3.15.0.0.2024.10.3 -vnormal+nowrap" >> "$GITHUB_ENV"
