--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -8,9 +8,9 @@
 #
 # For more information, see https://github.com/haskell-CI/haskell-ci
 #
-# version: 0.19.20241121
+# version: 0.19.20241202
 #
-# REGENDATA ("0.19.20241121",["github","ghc-exactprint.cabal","--ghcup-jobs"])
+# REGENDATA ("0.19.20241202",["github","ghc-exactprint.cabal","--ghcup-jobs"])
 #
 name: Haskell-CI
 on:
@@ -28,16 +28,16 @@ jobs:
     strategy:
       matrix:
         include:
-          - compiler: ghc-9.12.0.20241114
+          - compiler: ghc-9.12.0.20241128
             compilerKind: ghc
-            compilerVersion: 9.12.0.20241114
+            compilerVersion: 9.12.0.20241128
             setup-method: ghcup
             allow-failure: false
-          # - compiler: ghc-9.12.0.20241114
-          #   compilerKind: ghc
-          #   compilerVersion: 9.12.0.20241114
-          #   setup-method: ghcup-prerelease
-          #   allow-failure: false
+          - compiler: ghc-9.12.0.20241128
+            compilerKind: ghc
+            compilerVersion: 9.12.0.20241128
+            setup-method: ghcup-prerelease
+            allow-failure: false
       fail-fast: false
     steps:
       - name: apt-get install
@@ -51,9 +51,8 @@ jobs:
           chmod a+x "$HOME/.ghcup/bin/ghcup"
       - name: Install cabal-install
         run: |
-          "$HOME/.ghcup/bin/ghcup" config add-release-channel https://raw.githubusercontent.com/haskell/ghcup-metadata/master/ghcup-prereleases-0.0.8.yaml;
-          "$HOME/.ghcup/bin/ghcup" install cabal 3.15.0.0.2024.10.3 || (cat "$HOME"/.ghcup/logs/*.* && false)
-          echo "CABAL=$HOME/.ghcup/bin/cabal-3.15.0.0.2024.10.3 -vnormal+nowrap" >> "$GITHUB_ENV"
+          "$HOME/.ghcup/bin/ghcup" install cabal 3.12.1.0 || (cat "$HOME"/.ghcup/logs/*.* && false)
+          echo "CABAL=$HOME/.ghcup/bin/cabal-3.12.1.0 -vnormal+nowrap" >> "$GITHUB_ENV"
       - name: Install GHC (GHCup)
         if: matrix.setup-method == 'ghcup'
         run: |
