Check through hackage roundtrip GHC_CPP tests
TL;DR: fixed directives in pragmas (in GHC)
identified tests as benign, so deleted
migrated error reporting requirement for missing #if to GHC test GhcCpp02

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,8 @@ packages
 /failures.txt
 /tests/examples/transform/AddArgFromWhereComments.hs.expected
 /tests/examples/ghc912-copied/
+/hackage-version-macros.txt
+/hie.yaml.1
+/hie.yaml.bak
+/javascript-ffi-files.txt
+/roundtrip-config/knownfailures.txt.2025-05-26
