--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -28,10 +28,15 @@ jobs:
     strategy:
       matrix:
         include:
+          # - compiler: ghc-9.14.0.20250819
+          #   compilerKind: ghc
+          #   compilerVersion: 9.14.0.20250819
+          #   setup-method: ghcup
+          #   allow-failure: false
           - compiler: ghc-9.14.0.20250819
             compilerKind: ghc
             compilerVersion: 9.14.0.20250819
-            setup-method: ghcup
+            setup-method: ghcup-prerelease
             allow-failure: false
       fail-fast: false
     steps:
