--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -29,11 +29,11 @@ jobs:
     strategy:
       matrix:
         include:
-          - compiler: ghc-9.14.0.20250908
+          - compiler: ghc-9.14.0.20251007
             compilerKind: ghc
-            compilerVersion: 9.14.0.20250908
-            setup-method: ghcup
-            allow-failure: false
+            compilerVersion: 9.14.0.20251007
+            setup-method: ghcup-prerelease
+            allow-failure: true
           - compiler: ghc-9.14.0.20250908
             compilerKind: ghc
             compilerVersion: 9.14.0.20250908
